--- a/NOBMain.xaml
+++ b/NOBMain.xaml
@@ -43,6 +43,7 @@
 
             </StackPanel>
         </Canvas>
+        <TextBlock x:Name="ColorHintText" Text="UI1: 此腳本需要顏色判斷，請將解析度設為 1024x768。" Visibility="Collapsed" Margin="10,105,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Foreground="#FFB71C1C" FontWeight="Bold" TextWrapping="Wrap" Width="520" />
         <TextBox x:Name="視窗狀態" HorizontalAlignment="Left" Height="69" Margin="389,5,0,0" TextWrapping="WrapWithOverflow" Text="" VerticalAlignment="Top" Width="200" MaxLines="2147483643" MaxLength="6" ScrollViewer.CanContentScroll="True" UseLayoutRounding="True" Visibility="Visible" IsReadOnly="True" Style="{DynamicResource CurrentInputStyle}"/>
 
         <!-- 回報與聯絡區 -->
@@ -52,7 +53,7 @@
             <Button x:Name="Btn_ContactPurchase" Content="聯絡購買/加時" Height="22" Style="{DynamicResource CurrentButtonStyle}" IsEnabled="False"/>
         </StackPanel>
 
-        <StackPanel Margin="5,110,5,0" VerticalAlignment="Top">
+        <StackPanel Margin="10,135,10,0" VerticalAlignment="Top">
             <Expander x:Name="腳本展區" Grid.ColumnSpan="4" Header="腳本進階設定區" Margin="0" VerticalAlignment="Top">
                 <Grid x:Name="ControlGrid" UseLayoutRounding="False" HorizontalAlignment="Left" VerticalAlignment="Top" Height="218" Width="552" IsEnabled="False" Margin="0,5,0,0">
                     <StackPanel x:Name="通用欄" HorizontalAlignment="Left">
